# gum

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  run-clang-format.sh
cmake/Modules/: FindCppGear.cmake
cppgear/: CMakeLists.txt  Core.cpp  Core.h  Defer.h  Enum.cpp  Enum.h  Exception.cpp  Exception.h  ExceptionWrapper.h  FunctionToken.h  IBoolean.h  IToken.h  Maybe.h  ObjectToken.h  Optional.h  Range.h  Raw.h  SharedPtr.h  SharedReference.h  Singleton.h  Token.h  Try.h  Types.h  UniquePtr.h  UniqueReference.h  defer.h  maybe.h  misc.h  optional.h  options.cpp  options.h  range.h  raw.cpp  raw.h  types.h
cppgear/async/: AsyncFunction.h  ITaskQueue.h  LifeHandle.h  Signal.h
cppgear/backend/dummy/diagnostics/: Backtrace.h  Demangle.h
cppgear/backend/gnu/diagnostics/: Backtrace.cpp  Backtrace.h  Demangle.cpp  Demangle.h
cppgear/compare/: OwnerLess.h
cppgear/concurrency/: CancellableFunction.h  CancellationToken.cpp  CancellationToken.h  ConditionVariable.h  DummyCancellationHandle.cpp  DummyCancellationHandle.h  DummyMutex.h  GenericMutexLock.h  ICancellationToken.h  ILifeHandle.h  ImmutableMutexWrapper.h  LifeToken.cpp  LifeToken.h  Mutex.h  RwMutex.h  Thread.cpp  Thread.h  ThreadId.cpp  ThreadId.h  ThreadInfo.cpp  ThreadInfo.h  TimedMutexWrapper.h  Worker.cpp  Worker.h
cppgear/container/: FlatMap.h  FlatSet.h  Iterator.h  Lru.h  TwoQ.h  dynarray.cpp  dynarray.h  flat_map.h  iterator.h  lru.cpp  lru.h  twoq.cpp  twoq.h
cppgear/diagnostics/: Backtrace.cpp  Backtrace.h  Demangle.cpp  Demangle.h
cppgear/functional/: Invoker.h  Types.h
cppgear/log/: GlobalLogger.h  ILoggerSink.h  LogLevel.h  LogMessage.cpp  LogMessage.h  Logger.cpp  Logger.h  LoggerId.h  LoggerManager.cpp  LoggerManager.h  LoggerSingleton.h  LoggerStream.cpp  LoggerStream.h
cppgear/log/sinks/: AnsiTerminalLoggerSink.cpp  AnsiTerminalLoggerSink.h  StandardLoggerSink.cpp  StandardLoggerSink.h
cppgear/metaprogramming/: MethodDetector.h
cppgear/options/: options.cpp  options.h
cppgear/smartpointer/: SharedPtr.h  SharedReference.h  SmartpointerTraits.h  ToString.h  UniquePtr.h
cppgear/string/: String.h  StringLiteral.h  ToString.cpp  ToString.h
cppgear/time/: ElapsedTime.h  ToString.cpp  ToString.h  Types.h
cppgear/token/: FunctionToken.h  GuardedTokenPool.h  IGuardedTokenPool.h  ITokenPool.h  ObjectToken.h  Token.h  TokenPool.h
gum/: CMakeLists.txt  Core.cpp  Core.h  Defer.h  DynamicCaster.h  Enum.cpp  Enum.h  ErrorOr.h  Exception.cpp  Exception.h  ExceptionRef.h  IBoolean.h  IObservableValue.h  Match.h  Maybe.h  ObservableValue.h  Optional.h  Overload.h  Range.h  Raw.h  Singleton.h  Slice.h  Try.h  Types.h  Unit.h  Visit.h
gum/async/: AsyncFunction.h  ITaskQueue.h  LifeHandle.h  Signal.h  TaskQueue.cpp  TaskQueue.h
gum/backend/boost/: BoostSystemException.h  ToString.h
gum/backend/boost/asio/: BoostAsyncByteStream.cpp  BoostAsyncByteStream.h  BoostIoWorker.cpp  BoostIoWorker.h  BoostStrand.h  BoostStreamDescriptor.h
gum/backend/dummy/diagnostics/: Backtrace.h  Demangle.h
gum/backend/gnu/diagnostics/: Backtrace.cpp  Backtrace.h  Demangle.cpp  Demangle.h
gum/backend/posix/filesystem/: FileDescriptor.cpp  FileDescriptor.h
gum/compare/: OwnerLess.h
gum/concurrency/: CancellableFunction.h  CancellationToken.cpp  CancellationToken.h  ConditionVariable.h  DummyCancellationHandle.cpp  DummyCancellationHandle.h  DummyMutex.h  GenericMutexLock.h  ICancellationToken.h  ImmutableMutexWrapper.h  LifeToken.cpp  LifeToken.h  Mutex.h  RwMutex.h  Thread.cpp  Thread.h  ThreadId.cpp  ThreadId.h  ThreadInfo.cpp  ThreadInfo.h  TimedMutexWrapper.h  Worker.cpp  Worker.h
gum/container/: ContainerOp.h  ContainerTraits.h  FlatMap.h  FlatSet.h  HashMap.h  IContainer.h  IMap.h  IObservableMap.h  Iterator.h  Lru.h  ObservableHashMap.h  ObservableSortedMap.h  ObservableStlMap.h  SortedMap.h  StlMap.h  TwoQ.h
gum/diagnostics/: Backtrace.cpp  Backtrace.h  Demangle.cpp  Demangle.h
gum/exception/: Exception.cpp  Exception.h  ExceptionDetails.cpp  ExceptionDetails.h
gum/functional/: Invoker.h  Types.h
gum/io/: ByteData.h  Eof.h  ISeekable.h
gum/io/async/: IAsyncByteStream.h
gum/io/filesystem/: FileOpenFlags.h  FilesystemService.cpp  FilesystemService.h  IFile.h  IFilesystemService.h
gum/log/: GlobalLogger.h  ILoggerSink.h  LogLevel.h  LogMessage.cpp  LogMessage.h  Logger.cpp  Logger.h  LoggerId.h  LoggerManager.cpp  LoggerManager.h  LoggerSingleton.h  LoggerStream.cpp  LoggerStream.h
gum/log/sinks/: AnsiTerminalLoggerSink.cpp  AnsiTerminalLoggerSink.h  StandardLoggerSink.cpp  StandardLoggerSink.h
gum/maybe/: Maybe.h  MaybeTraits.h
gum/metaprogramming/: MethodDetector.h  PassingType.h
gum/smartpointer/: DynamicCaster.h  SharedPtr.h  SharedReference.h  SmartpointerTraits.h  UniquePtr.h  UniqueReference.h
gum/string/: IStringRepresentable.h  String.cpp  String.h  StringLiteral.h  StringRef.h  ToString.cpp  ToString.h
gum/sys/: ErrnoToString.cpp  ErrnoToString.h  SystemException.h
gum/time/: ElapsedTime.h  Types.h
gum/token/: FunctionToken.h  GuardedTokenPool.h  IGuardedTokenPool.h  ITokenPool.h  ObjectToken.h  Token.h  TokenPool.h
scripts/: run-clang-format.sh
test/: CMakeLists.txt  FilesystemServiceTest.cpp  FlatMapTest.cpp  flat_map_test.cpp  main.cpp  option-test.cpp
